@@ -88,12 +88,15 @@ Ottava_bracket::print (SCM smob)
       Interval ext;
       if (Note_column::has_interface (b))
 	{
-	  for (SCM s = b->get_property ("note-heads"); ly_pair_p (s); s =ly_cdr (s))
-	    ext.unite (unsmob_grob (ly_car (s))->extent (common, X_AXIS));
+	  for (SCM s = b->get_property ("note-heads"); gh_pair_p (s); s =gh_cdr (s))
+	    ext.unite (unsmob_grob (gh_car (s))->extent (common, X_AXIS));
 	}
 
       if (ext.is_empty ())
-	ext = Interval (0,0);
+	{
+	  Real x = b->relative_coordinate (common, X_AXIS);
+	  ext = Interval (x,x);
+	}
       
       span_points[d] =  (broken [d]) ? b->extent (common, X_AXIS)[-d] : ext[d];
 
