@@ -1,3 +1,7 @@
+2004-05-04  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* lily/ottava-bracket.cc (print): fix ottava on rests.
+
 2004-05-03  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
 	* scm/music-functions.scm (set-accidental-style): use GrandStaff
